[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/ui/board/summary_view.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/courier_30.tres" type="FontFile" id=2]

[node name="summary_view" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
offset_left = -300.0
offset_top = -50.0
offset_right = 300.0
offset_bottom = 50.0
color = Color( 0.196078, 0.196078, 0.196078, 0.823529 )
__meta__ = {
"_editor_description_": ""
}

[node name="mission_complete" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_MISS_COMP"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mission_failed" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_MISS_FAIL"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="blue_wins" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_SAP_DAWN_WIN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="red_wins" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_RUBY_DUSK_WIN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="yellow_wins" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_AMBER_NOON_WIN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="green_wins" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_JADE_TWI_WIN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="black_wins" type="Label" parent="background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 7.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_OBS_NIGHT_WIN"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="menu_button" type="Button" parent="."]
offset_left = -300.0
offset_top = 60.0
offset_right = -185.0
offset_bottom = 90.0
text = "TR_MAIN_MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="restart_button" type="Button" parent="."]
offset_left = 185.0
offset_top = 60.0
offset_right = 300.0
offset_bottom = 90.0
text = "TR_RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="next_mission_button" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = 60.0
offset_right = 125.0
offset_bottom = 135.0
theme_override_fonts/font = ExtResource( 2 )
text = "TR_NEXT_MISS"
__meta__ = {
"_editor_description_": ""
}

[connection signal="pressed" from="menu_button" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="next_mission_button" to="." method="_on_next_mission_button_pressed"]
